--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.47",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
@@ -49,6 +50,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "fix" : [
+            "./vendor/bin/php-cs-fixer fix  --verbose --using-cache=no"
+        ],
+        "test" : [
+            "./vendor/bin/pest --parallel"
         ]
     },
     "extra": {
