--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "lucide-vue-next": "^0.321.0",
+        "radix-vue": "^1.4.0",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
