--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@vueuse/core": "^10.7.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "leaflet": "^1.9.4",
         "lucide-vue-next": "^0.321.0",
         "radix-vue": "^1.4.0",
         "tailwind-merge": "^2.2.1",
