Atualizações nos componentes e páginas de unidades

--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
   },
   "framework": "laravel",
   "aliases": {
-    "components": "@/components",
+    "components": "@/Components",
     "utils": "@/lib/utils"
   }
 }
