--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "primevue": "^3.48.1",
         "radix-vue": "^1.4.0",
         "tailwind-merge": "^2.2.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "vue-the-mask": "^0.11.1"
     }
 }
